[gd_scene load_steps=4 format=3 uid="uid://n73bxxre1axm"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_a1042"]
[ext_resource type="AudioStream" uid="uid://d00t8ixg88t83" path="res://assets/sounds/music.mp3" id="2_rgbq7"]
[ext_resource type="PackedScene" uid="uid://ehskbvrbf5ue" path="res://scenes/sounds.tscn" id="3_3l58i"]

[node name="App" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a1042")

[node name="MainMenu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainButtons" type="Control" parent="MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Layout" type="VBoxContainer" parent="MainMenu/MainButtons"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -94.0
offset_top = 3.0
offset_right = 94.0
offset_bottom = 189.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="MainMenu/MainButtons/Layout"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Start"

[node name="LevelsButton" type="Button" parent="MainMenu/MainButtons/Layout"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Levels"

[node name="Label" type="Label" parent="MainMenu/MainButtons"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -514.0
offset_top = -205.0
offset_right = 514.0
offset_bottom = -57.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 108
text = "Magical Bubble Run"

[node name="LevelSelect" type="Control" parent="MainMenu"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LevelSelect" type="GridContainer" parent="MainMenu/LevelSelect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -127.0
offset_top = -33.0
offset_right = 127.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
columns = 6

[node name="Level1" type="Button" parent="MainMenu/LevelSelect/LevelSelect"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Level 1"

[node name="Level2" type="Button" parent="MainMenu/LevelSelect/LevelSelect"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Level 2"

[node name="Level3" type="Button" parent="MainMenu/LevelSelect/LevelSelect"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Level 3"

[node name="Level4" type="Button" parent="MainMenu/LevelSelect/LevelSelect"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Level 4"

[node name="Back" type="Button" parent="MainMenu/LevelSelect"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -109.0
offset_top = -77.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 35
text = "Back"

[node name="WinScreen" type="Control" parent="MainMenu"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="MainMenu/WinScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -505.5
offset_top = -287.0
offset_right = 505.5
offset_bottom = 168.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 165
text = "Congration!
You done it!"
horizontal_alignment = 1

[node name="Back" type="Button" parent="MainMenu/WinScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.5
offset_top = 173.0
offset_right = 44.5
offset_bottom = 230.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 35
text = "Back"

[node name="Intro" type="Control" parent="MainMenu"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="MainMenu/Intro"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -316.0
offset_top = -223.0
offset_right = 316.0
offset_bottom = 92.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 36
text = "The story starts off with Mr. Oswald threating to rule the world. One witch named Lydia with bubble magic has taken up the challenge to climb his tower and stop him from taking over the world!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Continue" type="Button" parent="MainMenu/Intro"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -81.0
offset_top = 143.0
offset_right = 81.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 35
text = "Continue"

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_rgbq7")
volume_db = -10.0
parameters/looping = true

[node name="Sounds" parent="." instance=ExtResource("3_3l58i")]

[connection signal="pressed" from="MainMenu/MainButtons/Layout/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MainMenu/MainButtons/Layout/LevelsButton" to="." method="_on_levels_button_pressed"]
[connection signal="pressed" from="MainMenu/LevelSelect/LevelSelect/Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="MainMenu/LevelSelect/LevelSelect/Level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="MainMenu/LevelSelect/LevelSelect/Level3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="MainMenu/LevelSelect/LevelSelect/Level4" to="." method="_on_level_4_pressed"]
[connection signal="pressed" from="MainMenu/LevelSelect/Back" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="MainMenu/WinScreen/Back" to="." method="_on_win_back_pressed"]
[connection signal="pressed" from="MainMenu/Intro/Continue" to="." method="_on_continue_pressed"]
